Clase07/01-despliegue-aws/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      env: dev
      app: backend1
  template:
    metadata:
      labels:
        env: dev
        app: backend1
    spec:
      containers:
        - name: backend1
          image: 282865065290.dkr.ecr.us-east-1.amazonaws.com/backend1
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
