Clase07/01-despliegue-aws/backend2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      env: dev
      app: backend2
  template:
    metadata:
      labels:
        env: dev
        app: backend2
    spec:
      containers:
        - name: backend2
          image: 282865065290.dkr.ecr.us-east-1.amazonaws.com/backend2
          imagePullPolicy: Always
