Clase07/01-despliegue-aws/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      env: dev
      app: frontend
  template:
    metadata:
      labels:
        env: dev
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 282865065290.dkr.ecr.us-east-1.amazonaws.com/frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
